feature section html structure

--- a/future.html
+++ b/future.html
@@ -23,12 +23,26 @@
                 <p class="banner-decription">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione quas doloremque iure nisi quaerat in et quae qui, quo commodi magni earum laborum repellat sed laudantium itaque accusamus! Eligendi, rerum.</p>
                 <button class="btn-primery">Exploer More</button>   
             </div>
-            <img src="image/bird.jpg" alt="">
+            <img src="image/bird.jpg" alt="" height="600px" width="px">
         </div>
 
     </header>
     <main>
-
+         <section class="teams-container">
+            
+             <div class="teams-img-container">
+                <img src="image/Food A.jpg" alt="" height="200px">
+                <img src="image/Food B.jpg" alt="" height="200px">
+                <img src="image/Food C.jpg" alt="" height="200px">
+                <img src="image/Food D.jpg" alt="" height="200px">
+             </div>
+            <div class="teams-content">
+                <h3 class="teams-title"><span class="quick-list">Quick list</span> <span>of Our</span> <span class="text-features">Features</span></h3>
+                 <P class="teams-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae et earum illo rem possimus consectetur aut pariatur tempore maxime quidem numquam velit omnis, reprehenderit nihil mollitia similique placeat non debitis?</P>
+                 <button class="btn-primery">Exploer More</button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
